# seeyou-cupx-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: cupx_parsing.rs  cupx_writing.rs
docs/: architecture.md
src/: error.rs  lib.rs  limited_reader.rs  reader.rs  writer.rs
tests/: large_cup_file_test.rs  reader_test.rs  three_zip_files_test.rs  writer_test.rs
tests/fixtures/: EC25_no_pictures_zip.cupx
tests/snapshots/: reader_test__2_1034.snap  reader_test__westalpen.snap  writer_test__2_1034.snap
