[package]
name = "seeyou-cupx"
version = "0.0.0"
description = "A Rust library for parsing and writing SeeYou CUPX files, commonly used in aviation and gliding for waypoints with attached pictures"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Turbo87/seeyou-cupx-rs"
edition = "2024"
exclude = ["docs/*", "examples/*", "tests/*", ".gitignore"]

[dependencies]
seeyou-cup = "0.2.0"
zip = { version = "5.1.1", default-features = false, features = ["deflate"] }
