[package]
name = "seeyou-cupx"
version = "0.0.0"
description = "A Rust library for parsing and writing SeeYou CUPX files, commonly used in aviation and gliding for waypoints with attached pictures"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Turbo87/seeyou-cupx-rs"
edition = "2024"
exclude = ["docs/*", "examples/*", "tests/*", ".gitignore"]

[dependencies]
memchr = "2.7.4"
seeyou-cup = "0.2.0"
thiserror = "2.0.17"
zip = { version = "5.1.1", default-features = false, features = ["deflate"] }

[dev-dependencies]
criterion = "0.7.0"
insta = "1.43.2"

[[bench]]
name = "cupx_parsing"
harness = false

[package.metadata.release]
pre-release-commit-message = "Release v{{version}}"
tag-message = ""
# Disable `cargo publish` since we use CI for publishing
publish = false
